  * New upstream release:
    - drop 11_wpa_gui_ftbfs_gcc_4_7, applied upstream.
  * enable IBSS RSN, thanks to Nicolas Cavallari <batchman@free.fr>
    (Closes: #678147).
  * enable simple AP support for wpasupplicant, thanks to Patrik Flykt
    <patrik.flykt@linux.intel.com> (Closes: #690536).
  * use the readline6, wpa_cli doesn't link to openssl.
  * link with --as-needed.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 16 Jan 2013 18:48:22 +0100

wpa (1.0-3) unstable; urgency=high

  * ship forgotten README-P2P.
  * revert to GNU readline for wpa_cli, instead of using the internal readline
    implementation added in wpa 1~. Prefer libreadline-gplv2-dev, because libnl
    is GPL-2 (only) - switching back to the internal readline implementation is
    targeted for wheezy+1 (Closes: #677993, #678077).
  * Fix DoS via specially crafted EAP-TLS messages with longer message
    length than TLS data length (CVE-2012-4445, DSA 2557-1, Closes: #689990).

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 08 Oct 2012 17:48:04 +0200

wpa (1.0-2) unstable; urgency=low

  * Really enable hardened build flags, thanks Simon Ruderich
    <simon@ruderich.org>. (Closes: #657332)
  * Do not suppress compilation output, set V=1.

 -- Kel Modderman <kel@otaku42.de>  Mon, 14 May 2012 06:39:13 +1000

wpa (1.0-1) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * New upstream release, no code changes since 1.0~rc3.
  * upload to unstable, to fix FTBS with gcc-4.7.
  * update debian/README.source.

  [ Kel Modderman ]
  * No longer explicitly add --as-needed to LDFLAGS, it is no longer
    required since wpa_cli stopped linking to libreadline (WPA_CLI_EDIT=y).

 -- Kel Modderman <kel@otaku42.de>  Fri, 11 May 2012 13:58:51 +1000

wpa (1.0~rc3-1) experimental; urgency=low

  [ Stefan Lippers-Hollmann ]
  * import new upstream snapshot 1.0-rc3:
    - fixes:
      - hostapd: Fails to authenticate on wpa2 password (Closes: #483924)