@@ -2,12 +2,12 @@
 
 # The build system doesn't use CPPFLAGS, pass them to CFLAGS/CXXFLAGS to
 # enable the missing (hardening) flags
-CFLAGS   += -MMD -Wall $(CPPFLAGS)
-CXXFLAGS += $(CPPFLAGS)
+DEB_CFLAGS_MAINT_APPEND   = -MMD -Wall $(shell dpkg-buildflags --get CPPFLAGS)
+DEB_CXXFLAGS_MAINT_APPEND = $(shell dpkg-buildflags --get CPPFLAGS)
+DEB_LDFLAGS_MAINT_APPEND  = -Wl,--as-needed
+export DEB_CFLAGS_MAINT_APPEND DEB_CXXFLAGS_MAINT_APPEND DEB_LDFLAGS_MAINT_APPEND
 
 UCFLAGS  = -MMD -Wall -g -Os
-
-LDFLAGS += -Wl,--as-needed
 
 BINDIR   = /sbin
 V = 1
@@ -18,7 +18,7 @@ ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
 	CC=$(DEB_HOST_GNU_TYPE)-gcc
 endif
 
-export CC BINDIR LDFLAGS V
+export CC BINDIR V
 
 DEB_HOST_ARCH_OS              ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 HOSTAPD_DOT_CONFIG            := debian/config/hostapd/$(DEB_HOST_ARCH_OS)
@@ -119,6 +119,9 @@ override_dh_installchangelogs:
 override_dh_gencontrol:
 	dh_gencontrol -phostapd -- '-v1:$(VERSION)'
 	dh_gencontrol --remaining-packages
+
+override_dh_builddeb:
+	dh_builddeb -- -Zxz -z6
 ### end dh overrides
 
 %:
