@@ -1,0 +1,2 @@
+compression = "xz"
+compression-level = 9
